[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dp-math"  # Must be unique on PyPI
version = "0.0.1"
authors = [
    {name = "Samuel Steinberg", email = "sampaulsteinberg@gmail.com"}
]
description = "Niche mathematical functions for specialized calculations for dimensional engineering"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.0.0",  # Add your dependencies here
]

[project.urls]
Homepage = "https://github.com/spaulsteinberg/dimensional-math"
Issues = "https://github.com/spaulsteinberg/dimensional-math/issues"